-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: repo-panama
-
Component/s: hotspot
Following tests started to crash in latest panama-vector/vectorIntrinsics branch:
jdk/incubator/vector/Double512VectorTests.java
jdk/incubator/vector/Double64VectorTests.java
jdk/incubator/vector/Float512VectorTests.java
The crash is like:
# Internal Error (/home/katya/work/JavaSE/Hotspot/ws/git/panama-vector/open/src/hotspot/share/opto/type.cpp:2316), pid=21055, tid=21071
# assert(Matcher::vector_size_supported(elem_bt, length)) failed: length in range
#
# JRE version: Java(TM) SE Runtime Environment (17.0) (fastdebug build 17-internal+0-LTS-2021-02-09-0455545.katya...)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 17-internal+0-LTS-2021-02-09-0455545.katya..., mixed mode, sharing, compressed oops, compressed c
lass ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x18b43d3] TypeVect::make(Type const*, unsigned int)+0x73
Current CompileTask:
C2: 5284 525 % b Double64VectorTests::ACOSDouble64VectorTests @ 50 (120 bytes)
Stack: [0x00007f8954423000,0x00007f8954524000], sp=0x00007f895451ec60, free space=1007k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x18b43d3] TypeVect::make(Type const*, unsigned int)+0x73
V [libjvm.so+0x19084dd] GraphKit::unbox_vector(Node*, TypeInstPtr const*, BasicType, int, bool)+0x14d
V [libjvm.so+0x190957d] LibraryCallKit::inline_vector_nary_operation(int)+0xbbd
V [libjvm.so+0x124fd31] LibraryIntrinsic::generate(JVMState*)+0x211
V [libjvm.so+0x842cf7] CallGenerator::do_late_inline_helper()+0xaf7
V [libjvm.so+0xa0adfd] Compile::inline_incrementally_one()+0x33d
V [libjvm.so+0xa0b15f] Compile::inline_incrementally(PhaseIterGVN&)+0x18f
V [libjvm.so+0xa0bbb9] Compile::Optimize()+0x3e9
V [libjvm.so+0xa0ead5] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x1905
V [libjvm.so+0x83a4ea] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1ea
V [libjvm.so+0xa1e9a1] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xea1
V [libjvm.so+0xa1f628] CompileBroker::compiler_thread_loop()+0x5a8
V [libjvm.so+0x1886b36] JavaThread::thread_main_inner()+0x256
V [libjvm.so+0x188cfc0] Thread::call_run()+0x100
V [libjvm.so+0x1537886] thread_native_entry(Thread*)+0x116
To reproduce just run one of failed tests. Example:
> jtreg -va -jdk:build.vectorIntrinsics/linux-x64/images/jdk -dir:open/test/jdk jdk/incubator/vector/Double64VectorTests.java
jdk/incubator/vector/Double512VectorTests.java
jdk/incubator/vector/Double64VectorTests.java
jdk/incubator/vector/Float512VectorTests.java
The crash is like:
# Internal Error (/home/katya/work/JavaSE/Hotspot/ws/git/panama-vector/open/src/hotspot/share/opto/type.cpp:2316), pid=21055, tid=21071
# assert(Matcher::vector_size_supported(elem_bt, length)) failed: length in range
#
# JRE version: Java(TM) SE Runtime Environment (17.0) (fastdebug build 17-internal+0-LTS-2021-02-09-0455545.katya...)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 17-internal+0-LTS-2021-02-09-0455545.katya..., mixed mode, sharing, compressed oops, compressed c
lass ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x18b43d3] TypeVect::make(Type const*, unsigned int)+0x73
Current CompileTask:
C2: 5284 525 % b Double64VectorTests::ACOSDouble64VectorTests @ 50 (120 bytes)
Stack: [0x00007f8954423000,0x00007f8954524000], sp=0x00007f895451ec60, free space=1007k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x18b43d3] TypeVect::make(Type const*, unsigned int)+0x73
V [libjvm.so+0x19084dd] GraphKit::unbox_vector(Node*, TypeInstPtr const*, BasicType, int, bool)+0x14d
V [libjvm.so+0x190957d] LibraryCallKit::inline_vector_nary_operation(int)+0xbbd
V [libjvm.so+0x124fd31] LibraryIntrinsic::generate(JVMState*)+0x211
V [libjvm.so+0x842cf7] CallGenerator::do_late_inline_helper()+0xaf7
V [libjvm.so+0xa0adfd] Compile::inline_incrementally_one()+0x33d
V [libjvm.so+0xa0b15f] Compile::inline_incrementally(PhaseIterGVN&)+0x18f
V [libjvm.so+0xa0bbb9] Compile::Optimize()+0x3e9
V [libjvm.so+0xa0ead5] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x1905
V [libjvm.so+0x83a4ea] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1ea
V [libjvm.so+0xa1e9a1] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xea1
V [libjvm.so+0xa1f628] CompileBroker::compiler_thread_loop()+0x5a8
V [libjvm.so+0x1886b36] JavaThread::thread_main_inner()+0x256
V [libjvm.so+0x188cfc0] Thread::call_run()+0x100
V [libjvm.so+0x1537886] thread_native_entry(Thread*)+0x116
To reproduce just run one of failed tests. Example:
> jtreg -va -jdk:build.vectorIntrinsics/linux-x64/images/jdk -dir:open/test/jdk jdk/incubator/vector/Double64VectorTests.java
- duplicates
-
JDK-8261484 Double64VectorTests.java crashes on x86
-
- Closed
-