8261394: [vector] Crash with "assert(Matcher::vector_size_supported(elem_bt, length)) failed: length in range"

Reviewed-by: njian, jiefu, sviswanathan